--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3794,7 +3794,7 @@ a {
   background: #64dac0;
 }
 .cid-uax5g0jDr9 .mbr-iconfont.blue-fundo-circle {
-  background: #517bc9;
+  background: #938bed;
 }
 .cid-uax5g0jDr9 .material-icons.md-48.orange600 {
   color: #FB8C00;
@@ -3835,6 +3835,7 @@ a {
 }
 .cid-tJS9pBcTSa .mbr-section-subtitle {
   text-align: center;
+  color: #232323;
 }
 .cid-uaYvnfcB27 {
   padding-top: 2rem;
