--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -20,7 +20,7 @@ body {
   font-family: Inter Tight;
 }
 .display-1 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 4rem;
   line-height: 1;
 }
@@ -28,7 +28,7 @@ body {
   font-size: 5rem;
 }
 .display-2 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 3.4rem;
   line-height: 1;
 }
@@ -36,7 +36,7 @@ body {
   font-size: 4.25rem;
 }
 .display-4 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 0.9rem;
   line-height: 1.5;
 }
@@ -44,7 +44,7 @@ body {
   font-size: 1.125rem;
 }
 .display-5 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1.6rem;
   line-height: 1.5;
 }
@@ -52,7 +52,7 @@ body {
   font-size: 2rem;
 }
 .display-7 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1rem;
   line-height: 1.3;
 }
@@ -641,7 +641,7 @@ a:hover {
   border-radius: 100px;
 }
 .form-control {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1rem;
   line-height: 1.3;
   font-weight: 400;
@@ -656,7 +656,7 @@ a:hover {
   border-color: #3d3b3b !important;
 }
 .form-control:-webkit-input-placeholder {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1rem;
   line-height: 1.3;
   font-weight: 400;
