create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1211,7 +1211,7 @@ a {
 .cid-ubwXpIbMQK {
   padding-top: 2rem;
   padding-bottom: 1rem;
-  background-image: url("../../../assets/images/background1.webp");
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-ubwXpIbMQK .mbr-fallback-image.disabled {
   display: none;
@@ -1842,7 +1842,7 @@ a {
 .cid-ubwXpIbMQK {
   padding-top: 2rem;
   padding-bottom: 1rem;
-  background-image: url("../../../assets/images/background1.webp");
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-ubwXpIbMQK .mbr-fallback-image.disabled {
   display: none;
@@ -2470,7 +2470,7 @@ a {
 .cid-ubwXpIbMQK {
   padding-top: 2rem;
   padding-bottom: 1rem;
-  background-image: url("../../../assets/images/background1.webp");
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-ubwXpIbMQK .mbr-fallback-image.disabled {
   display: none;
@@ -3098,7 +3098,7 @@ a {
 .cid-ubwXpIbMQK {
   padding-top: 2rem;
   padding-bottom: 1rem;
-  background-image: url("../../../assets/images/background1.webp");
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-ubwXpIbMQK .mbr-fallback-image.disabled {
   display: none;
@@ -3811,7 +3811,7 @@ a {
 .cid-tJS9pBcTSa {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-image: url("../../../assets/images/background1.webp");
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-tJS9pBcTSa .mbr-overlay {
   background-color: #ffffff;
@@ -4013,7 +4013,7 @@ a {
 .cid-uaLXGeNsgU {
   padding-top: 2rem;
   padding-bottom: 1rem;
-  background-image: url("../../../assets/images/background1.webp");
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-uaLXGeNsgU .mbr-fallback-image.disabled {
   display: none;
@@ -4322,7 +4322,7 @@ a {
 .cid-ubwXpIbMQK {
   padding-top: 2rem;
   padding-bottom: 1rem;
-  background-image: url("../../../assets/images/background1.webp");
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-ubwXpIbMQK .mbr-fallback-image.disabled {
   display: none;
@@ -5225,7 +5225,7 @@ a {
 .cid-ubwXpIbMQK {
   padding-top: 2rem;
   padding-bottom: 1rem;
-  background-image: url("../../../assets/images/background1.webp");
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-ubwXpIbMQK .mbr-fallback-image.disabled {
   display: none;
@@ -5870,7 +5870,7 @@ a {
 .cid-ubwXpIbMQK {
   padding-top: 2rem;
   padding-bottom: 1rem;
-  background-image: url("../../../assets/images/background1.webp");
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-ubwXpIbMQK .mbr-fallback-image.disabled {
   display: none;
@@ -6402,7 +6402,7 @@ a {
 .cid-ubwXpIbMQK {
   padding-top: 2rem;
   padding-bottom: 1rem;
-  background-image: url("../../../assets/images/background1.webp");
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-ubwXpIbMQK .mbr-fallback-image.disabled {
   display: none;
@@ -6885,7 +6885,7 @@ a {
 .cid-uaNp8gKsCu {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-image: url("../../../assets/images/mbr-1920x1630.webp");
+  background-image: url("../../../assets/images/mbr-1920x1630.jpg");
 }
 .cid-uaNp8gKsCu .mbr-fallback-image.disabled {
   display: none;
@@ -6960,7 +6960,7 @@ a {
 .cid-ubwXpIbMQK {
   padding-top: 2rem;
   padding-bottom: 1rem;
-  background-image: url("../../../assets/images/background1.webp");
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-ubwXpIbMQK .mbr-fallback-image.disabled {
   display: none;
@@ -7443,7 +7443,7 @@ a {
 .cid-uaG6g0VPpl {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-image: url("../../../assets/images/mbr-1920x1280.webp");
+  background-image: url("../../../assets/images/mbr-1920x1280.jpg");
 }
 .cid-uaG6g0VPpl .mbr-fallback-image.disabled {
   display: none;
@@ -7518,7 +7518,7 @@ a {
 .cid-ubwXpIbMQK {
   padding-top: 2rem;
   padding-bottom: 1rem;
-  background-image: url("../../../assets/images/background1.webp");
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-ubwXpIbMQK .mbr-fallback-image.disabled {
   display: none;
@@ -8204,7 +8204,7 @@ a {
 .cid-ubwXpIbMQK {
   padding-top: 2rem;
   padding-bottom: 1rem;
-  background-image: url("../../../assets/images/background1.webp");
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-ubwXpIbMQK .mbr-fallback-image.disabled {
   display: none;
@@ -8777,7 +8777,7 @@ a {
 .cid-ubwXpIbMQK {
   padding-top: 2rem;
   padding-bottom: 1rem;
-  background-image: url("../../../assets/images/background1.webp");
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-ubwXpIbMQK .mbr-fallback-image.disabled {
   display: none;
@@ -9350,7 +9350,7 @@ a {
 .cid-ubwXpIbMQK {
   padding-top: 2rem;
   padding-bottom: 1rem;
-  background-image: url("../../../assets/images/background1.webp");
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-ubwXpIbMQK .mbr-fallback-image.disabled {
   display: none;
@@ -9923,7 +9923,7 @@ a {
 .cid-ubwXpIbMQK {
   padding-top: 2rem;
   padding-bottom: 1rem;
-  background-image: url("../../../assets/images/background1.webp");
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-ubwXpIbMQK .mbr-fallback-image.disabled {
   display: none;
